test protect branch and add gitingore .vscode

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -19,7 +19,7 @@ coverage
 
 # Editor directories and files
 ../client/.vscode/extensions.json
-!.vscode/extensions.json
+!../.vscode/extensions.json
 .idea
 *.suo
 *.ntvs*
